--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
       <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.css' rel='stylesheet' />
 
       <style>
+        
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-Medium-Web.woff');
+         font-weight: 500;
+         font-style: normal;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-MediumItalic-Web.woff');
+         font-weight: 500;
+         font-style: italic;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-Bold-Web.woff');
+         font-weight: 700;
+         font-style: normal;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-BoldItalic-Web.woff');
+         font-weight: 700;
+         font-style: italic;
+       }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-Regular-Web.woff');
+        font-weight: 400;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-RegularItalic-Web.woff');
+        font-weight: 400;
+        font-style: italic;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-Medium-Web.woff');
+        font-weight: 500;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-MediumItalic-Web.woff');
+        font-weight: 500;
+        font-style: italic;
+      }
+
         body {
           color:#3c3c3c;
           font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
