--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         body {
           color:#3c3c3c;
-          font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+          font:400 15px/22px 'PortraitText';
           margin:0;
           padding:0;
           -webkit-font-smoothing:antialiased;
