--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           max-width: 50%;
         }
         .mapboxgl-popup-content {
-          font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+          font:400 15px/22px 'PortraitText';
           padding:0;
         }
         .mapboxgl-popup-content-wrapper {
