--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           top:0;bottom:0;
         }
         h1 {
-          font-family:DrukText;
+          font-family:'DrukText';
           font-size:22px;
           margin:0;
           font-weight:400;
