--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           top:0;bottom:0;
         }
         h1 {
-          font-family:'DrukText';
-          font-size:36px;
+          font-family:'PortraitText';
+          font-size:22px;
           margin:0;
           font-weight:400;
           line-height: 20px;
