--- a/index_psu.html
+++ b/index_psu.html
@@ -6,6 +6,57 @@
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
 <style>
+  
+  @font-face {
+font-family: 'DrukText';
+src: url('../fonts/Druk-Medium-Web.woff');
+font-weight: 500;
+font-style: normal;
+}
+@font-face {
+font-family: 'DrukText';
+src: url('../fonts/Druk-MediumItalic-Web.woff');
+font-weight: 500;
+font-style: italic;
+}
+@font-face {
+font-family: 'DrukText';
+src: url('../fonts/Druk-Bold-Web.woff');
+font-weight: 700;
+font-style: normal;
+}
+@font-face {
+font-family: 'DrukText';
+src: url('../fonts/Druk-BoldItalic-Web.woff');
+font-weight: 700;
+font-style: italic;
+}
+@font-face {
+font-family: 'PortraitText';
+src: url('../fonts/Portrait-Regular-Web.woff');
+font-weight: 400;
+font-style: normal;
+}
+@font-face {
+font-family: 'PortraitText';
+src: url('../fonts/Portrait-RegularItalic-Web.woff');
+font-weight: 400;
+font-style: italic;
+}
+@font-face {
+font-family: 'PortraitText';
+src: url('../fonts/Portrait-Medium-Web.woff');
+font-weight: 500;
+font-style: normal;
+}
+@font-face {
+font-family: 'PortraitText';
+src: url('../fonts/Portrait-MediumItalic-Web.woff');
+font-weight: 500;
+font-style: italic;
+}
+
+  
         table.sortable thead {
             background-color:#eee;
             color:#000000;
@@ -15,7 +66,7 @@
         }
         table.sortable {
       		font-size: 12px;
-      		font-family: Arial, Helvetica, sans-serif;
+      		font-family: 'PortraitText';
       	}
         table.sortable {border-spacing: 0}
         table.sortable td, th {padding: 0 0.3em}
