--- a/index_notapsu.html
+++ b/index_notapsu.html
@@ -124,239 +124,239 @@ td{
 
 
 var dataset = [{
-  "Functional Hierarchy": "All-China Federation of Trade Unions",
+  "Functional Hierarchy*": "All-China Federation of Trade Unions",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "All-China Women's Federation",
+  "Functional Hierarchy*": "All-China Women's Federation",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Association for Science <br>and Technology",
+  "Functional Hierarchy*": "China Association for Science <br>and Technology",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Banking Regulatory Commission",
+  "Functional Hierarchy*": "China Banking Regulatory Commission",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Disabled Persons' Federation",
+  "Functional Hierarchy*": "China Disabled Persons' Federation",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Insurance Regulatory Commission",
+  "Functional Hierarchy*": "China Insurance Regulatory Commission",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Meteorological Administration",
+  "Functional Hierarchy*": "China Meteorological Administration",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "China Securities Regulatory Commission",
+  "Functional Hierarchy*": "China Securities Regulatory Commission",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Cyberspace Administration of China",
+  "Functional Hierarchy*": "Cyberspace Administration of China",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "General Administration of Quality <br>Supervision, Inspection, and Quarantine",
+  "Functional Hierarchy*": "General Administration of Quality <br>Supervision, Inspection, and Quarantine",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "General Administration of Sport",
+  "Functional Hierarchy*": "General Administration of Sport",
   "National-<br>level": 1,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Agriculture",
+  "Functional Hierarchy*": "Ministry of Agriculture",
   "National-<br>level": 1,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Civil Affairs",
+  "Functional Hierarchy*": "Ministry of Civil Affairs",
   "National-<br>level": 11,
   "Local-<br>level": 10
   },
   {
-  "Functional Hierarchy": "Ministry of Commerce",
+  "Functional Hierarchy*": "Ministry of Commerce",
   "National-<br>level": 0,
   "Local-<br>level": 35
   },
   {
-  "Functional Hierarchy": "Ministry of Culture",
+  "Functional Hierarchy*": "Ministry of Culture",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Education",
+  "Functional Hierarchy*": "Ministry of Education",
   "National-<br>level": 0,
   "Local-<br>level": 4
   },
   {
-  "Functional Hierarchy": "Ministry of Environmental Protection",
+  "Functional Hierarchy*": "Ministry of Environmental Protection",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Finance",
+  "Functional Hierarchy*": "Ministry of Finance",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Housing and Urban-Rural <br>Development",
+  "Functional Hierarchy*": "Ministry of Housing and Urban-Rural <br>Development",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Human Resources and <br>Social Security",
+  "Functional Hierarchy*": "Ministry of Human Resources and <br>Social Security",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Industry and Information <br>Technology",
+  "Functional Hierarchy*": "Ministry of Industry and Information <br>Technology",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Justice",
+  "Functional Hierarchy*": "Ministry of Justice",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Science and Technology",
+  "Functional Hierarchy*": "Ministry of Science and Technology",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Transport",
+  "Functional Hierarchy*": "Ministry of Transport",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Ministry of Water Resources",
+  "Functional Hierarchy*": "Ministry of Water Resources",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
 
   {
-  "Functional Hierarchy": "National Audit Office",
+  "Functional Hierarchy*": "National Audit Office",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "National Bureau of Statistics",
+  "Functional Hierarchy*": "National Bureau of Statistics",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "National Copyright Administration",
+  "Functional Hierarchy*": "National Copyright Administration",
   "National-<br>level": 2,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "National Development and Reform <br>Commission",
+  "Functional Hierarchy*": "National Development and Reform <br>Commission",
   "National-<br>level": 3,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "National Energy Administration",
+  "Functional Hierarchy*": "National Energy Administration",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "National Health and Family Planning <br>Commission",
+  "Functional Hierarchy*": "National Health and Family Planning <br>Commission",
   "National-<br>level": 5,
   "Local-<br>level": 12
   },
   {
-  "Functional Hierarchy": "National Tourism Administration",
+  "Functional Hierarchy*": "National Tourism Administration",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "Overseas Chinese Affairs Office of the <br>State Council",
+  "Functional Hierarchy*": "Overseas Chinese Affairs Office of the <br>State Council",
   "National-<br>level": 3,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "People's Bank of China",
+  "Functional Hierarchy*": "People's Bank of China",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration for Industry and <br>Commerce",
+  "Functional Hierarchy*": "State Administration for Industry and <br>Commerce",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Cultural <br>Heritage",
+  "Functional Hierarchy*": "State Administration of Cultural <br>Heritage",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Foreign Experts <br>Affairs",
+  "Functional Hierarchy*": "State Administration of Foreign Experts <br>Affairs",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Press, Publication, <br>Radio, Film, and Television",
+  "Functional Hierarchy*": "State Administration of Press, Publication, <br>Radio, Film, and Television",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Taxation",
+  "Functional Hierarchy*": "State Administration of Taxation",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Traditional <br>Chinese Medicine",
+  "Functional Hierarchy*": "State Administration of Traditional <br>Chinese Medicine",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Administration of Work Safety",
+  "Functional Hierarchy*": "State Administration of Work Safety",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Council Leading Group Office of <br>Poverty Alleviation and Development",
+  "Functional Hierarchy*": "State Council Leading Group Office of <br>Poverty Alleviation and Development",
   "National-<br>level": 0,
   "Local-<br>level": 3
   },
 
   {
-  "Functional Hierarchy": "State Food and Drug Administration",
+  "Functional Hierarchy*": "State Food and Drug Administration",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Forestry Administration",
+  "Functional Hierarchy*": "State Forestry Administration",
   "National-<br>level": 2,
   "Local-<br>level": 1
   },
   {
-  "Functional Hierarchy": "State Intellectual Property Office",
+  "Functional Hierarchy*": "State Intellectual Property Office",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Oceanic Administration",
+  "Functional Hierarchy*": "State Oceanic Administration",
   "National-<br>level": 0,
   "Local-<br>level": 0
   },
   {
-  "Functional Hierarchy": "State Post Bureau",
+  "Functional Hierarchy*": "State Post Bureau",
   "National-<br>level": 0,
   "Local-<br>level": 0
   }
