--- a/index_notapsu.html
+++ b/index_notapsu.html
@@ -3,6 +3,8 @@
 <head>
 <script src="./d3.v3.min.js"></script>
 <script src="./SpotMatrix1.js"></script>
+<title>Non-PSU Xitongs</title>
+  
 
 <style>
 
