--- a/index_notapsu.html
+++ b/index_notapsu.html
@@ -3,7 +3,7 @@
 <head>
 <script src="./d3.v3.min.js"></script>
 <script src="./SpotMatrix1.js"></script>
-<title>Non-PSU Xitongs</title>
+<title>Actual Sponsoring PSUs</title>
   
 
 <style>
