--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         "properties": {
           "orgname_en": "Advanced Medical Technology Association (AdvaMed)",
           "orgname_ch": "先进医疗技术协会",
-          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_en": "Shanghai Commission of Commerce",
           "originloc": "United States",
           "sector": "Trade",
           "regloc": "Shanghai",
@@ -276,7 +276,7 @@
         "properties": {
           "orgname_en": "AITEX",
           "orgname_ch": "西班牙纺织行业研究协会",
-          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_en": "Shanghai Commission of Commerce",
           "originloc": "Spain",
           "sector": "Trade",
           "regloc": "Shanghai",
@@ -337,7 +337,7 @@
         "properties": {
           "orgname_en": "Canada China Business Council",
           "orgname_ch": "加拿大加中贸易理事会",
-          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_en": "Shanghai Commission of Commerce",
           "originloc": "Canada",
           "sector": "Trade",
           "regloc": "Shanghai",
@@ -358,7 +358,7 @@
         "properties": {
           "orgname_en": "Casa Ricci Social Services",
           "orgname_ch": "利玛窦社会服务基金会",
-          "psu_en": "Yunnan Province Health and Family Planning Commission",
+          "psu_en": "Yunnan Health and Family Planning Commission",
           "originloc": "Macau",
           "sector": "Health",
           "regloc": "Yunnan",
@@ -379,7 +379,7 @@
         "properties": {
           "orgname_en": "CEDAR Fund",
           "orgname_ch": "国际施达有限公司",
-          "psu_en": "Yunnan Province Health and Family Planning Commission",
+          "psu_en": "Yunnan Health and Family Planning Commission",
           "originloc": "Hong Kong",
           "sector": "Health, Disaster Relief",
           "regloc": "Yunnan",
@@ -400,7 +400,7 @@
         "properties": {
           "orgname_en": "Charity Aid Service Company",
           "orgname_ch": "澳大利亚慈善救助服务公司",
-          "psu_en": "Chonqing City Civil Affairs Bureau",
+          "psu_en": "Chonqing Bureau of Civil Affairs",
           "originloc": "Australia",
           "sector": "Disabilities, Youth, Health, Civil Society Capacity-Building",
           "regloc": "Chongqing",
@@ -420,7 +420,7 @@
   "properties": {
     "orgname_en": "Cheongju Trade Union Discussion Forum",
     "orgname_ch": "韩国清州商工会议所",
-    "psu_en": "Hubei Provincial Department of Commerce",
+    "psu_en": "Hubei Department of Commerce",
     "originloc": "South Korea",
     "sector": "Trade",
     "regloc": "Hubei",
@@ -472,7 +472,40 @@
     "actarea": "Tianjin"
   }
 },
-
+        "properties": {
+          "orgname_en": "China Kind Fund",
+          "orgname_ch": "中华爱心基金会",
+          "psu_en": "National Development and Reform Commission",
+          "originloc": "Hong Kong",
+          "sector": "Ethnic Affairs",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "http://www.ckf.org.cn/ebinfo.asp",
+          "website_ch": "http://www.ckf.org.cn/index.asp"
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.417456, 39.912571
+          ]
+        },
+        "properties": {
+          "orgname_en": "China Medical Board",
+          "orgname_ch": "美国中华医学基金会",
+          "psu_en": "National Health and Family Planning Commission",
+          "originloc": "United States",
+          "sector": "Health, Education",
+          "regloc": "Beijing",
+          "regdate": "January 23, 2017",
+          "actarea": "China",
+          "website_en": "https://www.chinamedicalboard.org/",
+          "website_ch": "https://chinamedicalboard.org.cn/"
+        }
+      },
        {
         "type": "Feature",
         "geometry": {
@@ -484,7 +517,7 @@
         "properties": {
           "orgname_en": "China-Britain Business Council (Hunan)",
           "orgname_ch": "英中贸易协会",
-          "psu_en": "Hunan Province Department of Commerce",
+          "psu_en": "Hunan Department of Commerce",
           "originloc": "United Kingdom",
           "sector": "Trade",
           "regloc": "Hunan",
@@ -524,40 +557,7 @@
             39.900592
           ]
         },
-        "properties": {
-          "orgname_en": "China Kind Fund",
-          "orgname_ch": "中华爱心基金会",
-          "psu_en": "National Development and Reform Commission",
-          "originloc": "Hong Kong",
-          "sector": "Ethnic Affairs",
-          "regloc": "Beijing",
-          "regdate": "January 23, 2017",
-          "actarea": "China",
-          "website_en": "http://www.ckf.org.cn/ebinfo.asp",
-          "website_ch": "http://www.ckf.org.cn/index.asp"
-        }
-      },
-      {
-        "type": "Feature",
-        "geometry": {
-          "type": "Point",
-          "coordinates": [
-            116.417456, 39.912571
-          ]
-        },
-        "properties": {
-          "orgname_en": "China Medical Board",
-          "orgname_ch": "美国中华医学基金会",
-          "psu_en": "National Health and Family Planning Commission",
-          "originloc": "United States",
-          "sector": "Health, Education",
-          "regloc": "Beijing",
-          "regdate": "January 23, 2017",
-          "actarea": "China",
-          "website_en": "https://www.chinamedicalboard.org/",
-          "website_ch": "https://chinamedicalboard.org.cn/"
-        }
-      },
+
       {
         "type": "Feature",
         "geometry": {
