--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
         "properties": {
           "orgname_en": "Confederation of Indian Industry",
           "orgname_ch": "印度工业联合会",
-          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_en": "Shanghai Commission of Commerce",
           "originloc": "India",
           "sector": "Trade",
           "regloc": "Shanghai",
@@ -672,7 +672,7 @@
         "properties": {
           "orgname_en": "Cotton USA",
           "orgname_ch": "美国国际棉花协会",
-          "psu_en": "Shanghai Municipal Commission of Commerce",
+          "psu_en": "Shanghai Commission of Commerce",
           "originloc": "United States",
           "sector": "Trade",
           "regloc": "Shanghai",
@@ -713,7 +713,7 @@
         "properties": {
           "orgname_en": "Development Organisation of Rural Sichuan (DORS)",
           "orgname_ch": "四川农村发展组织",
-          "psu_en": "Sichuan Province Poverty Alleviation and Immigration Bureau",
+          "psu_en": "Sichuan Poverty Alleviation and Immigration Bureau",
           "originloc": "United Kingdom",
           "sector": "Rural Issues/Development, Women’s Issues, Poverty Alleviation, Economic Development, Health, Environment, Education",
           "regloc": "Sichuan",
@@ -734,7 +734,7 @@
         "properties": {
           "orgname_en": "Doctor Sun Yat-Sen Bo Ai Foundation Limited",
           "orgname_ch": "孙中山博爱基金会有限公司",
-          "psu_en": "Guangdong Province Department of Civil Affairs",
+          "psu_en": "Guangdong Department of Civil Affairs",
           "originloc": "Hong Kong",
           "sector": "Arts and Culture",
           "regloc": "Guangdong",
@@ -765,6 +765,27 @@
           "website_ch": "http://www.efchina.org/Front-Page-zh"
         }
       },
+            {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.439257, 39.895311
+          ]
+        },
+        "properties": {
+          "orgname_en": "Fédération Internationale de Volleyball",
+          "orgname_ch": "国际排球联合会",
+          "psu_en": "General Administration of Sport",
+          "originloc": "Switzerland",
+          "sector": "International Relations/Exchange, Sports",
+          "regloc": "Beijing",
+          "regdate": "April 26, 2017",
+          "actarea": "China",
+          "website_en": "http://www.fivb.com/en/"
+        }
+      },
+      
       {
         "type": "Feature",
         "geometry": {
@@ -786,26 +807,7 @@
           "website_ch": "https://www.industryhk.org/sc/"
         }
       },
-      {
-        "type": "Feature",
-        "geometry": {
-          "type": "Point",
-          "coordinates": [
-            116.439257, 39.895311
-          ]
-        },
-        "properties": {
-          "orgname_en": "Fédération Internationale de Volleyball",
-          "orgname_ch": "国际排球联合会",
-          "psu_en": "General Administration of Sport",
-          "originloc": "Switzerland",
-          "sector": "International Relations/Exchange, Sports",
-          "regloc": "Beijing",
-          "regdate": "April 26, 2017",
-          "actarea": "China",
-          "website_en": "http://www.fivb.com/en/"
-        }
-      },
+
       {
         "type": "Feature",
         "geometry": {
