--- a/index.html
+++ b/index.html
@@ -2030,20 +2030,19 @@
         "geometry": {
           "type": "Point",
           "coordinates": [
-            116.458875, 39.918944
+            120.370435, 36.142315
           ]
         },
         "properties": {
-          "orgname_en": "World Economic Forum",
-          "orgname_ch": "世界经济论坛",
-          "psu_en": "National Development and Reform Commission",
-          "originloc": "United States",
-          "sector": "International Relations/Exchange, Economic Development",
-          "regloc": "Beijing",
-          "regdate": "January 23, 2017",
-          "actarea": "China",
-          "website_en": "https://www.weforum.org/",
-          "website_ch": "https://cn.weforum.org/"
+          "orgname_en": "World Association of Chinese Doctors",
+          "orgname_ch": "世界华人医师协会",
+          "psu_en": "Shandong Health and Family Planning Commission",
+          "originloc": "Macau",
+          "sector": "Health, International Relations/Exchange",
+          "regloc": "Shandong",
+          "regdate": "May 18, 2017",
+          "actarea": "Yunnan, Shaanxi, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjin, Liaonin, Shanxi, Henan, Inner Mongolia, Hainan, Gansu, Tibet, Guangxi, Jiangsu, Heilongjiang, Shanghai, Zhejiang, Hunan, Hebei, Beijing, Sichuan, Fujian",
+          "website_ch": "http://www.wacd921.org/"
         }
       },
       
