--- a/index.html
+++ b/index.html
@@ -2080,7 +2080,7 @@
         "properties": {
           "orgname_en": "World Vision (Guangdong)",
           "orgname_ch": "世界宣明会-中国基金有限公司",
-          "psu_en": "Guangdong Province Department of Civil Affairs",
+          "psu_en": "Guangdong Department of Civil Affairs",
           "originloc": "Hong Kong",
           "sector": "Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building",
           "regloc": "Guangdong",
@@ -2126,7 +2126,7 @@
         "properties": {
           "orgname_en": "World Vision (Guizhou)",
           "orgname_ch": "世界宣明会-中国基金有限公司",
-          "psu_en": "Guizhou Province Department of Civil Affairs",
+          "psu_en": "Guizhou Department of Civil Affairs",
           "originloc": "Hong Kong",
           "sector": "Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants",
           "regloc": "Guizhou",
@@ -2148,7 +2148,7 @@
         "properties": {
           "orgname_en": "World Vision (Jiangxi)",
           "orgname_ch": "世界宣明会－中国基金有限公司",
-          "psu_en": "Jiangxi Province Department of Civil Affairs",
+          "psu_en": "Jiangxi Department of Civil Affairs",
           "originloc": "Hong Kong",
           "sector": "Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building",
           "regloc": "Jiangxi",
@@ -2279,7 +2279,7 @@
         "properties": {
           "orgname_en": "Zhang Xueliang Foundation",
           "orgname_ch": "张学良基金会",
-          "psu_en": "Guangdong Province Department of Civil Affairs",
+          "psu_en": "Guangdong Department of Civil Affairs",
           "originloc": "Hong Kong",
           "sector": "Poverty Alleviation, Youth, Aging, Disaster Relief, Arts and Culture, Education, International Relations/Exchange",
           "regloc": "Guangdong",
