--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -70,7 +70,7 @@
 
         table.sortable {
       		font-size: 12px;
-          font-family: 'PortraitText';
+          font-family: 'Sans-serif';
       	}
 
         table.sortable {border-spacing: 0}
