--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -67,7 +67,7 @@ font-style: italic;
         }
         table.sortable {
       		font-size: 12px;
-      		font-family: 'PortraitText';
+      		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       	}
         table.sortable {border-spacing: 0}
         table.sortable td, th {padding: 0 0.3em}
