--- a/index_pie_repoff_by_prov.html
+++ b/index_pie_repoff_by_prov.html
@@ -68,7 +68,7 @@ var pie = new d3pie("pieChart", {
 			"font": "DrukText"
 		},
 		"subtitle": {
-			"text": "Number of Representative Offices Registered in Each Province, Region, and City by as of June 16, 2017",
+			"text": "Number of Representative Offices Registered in Each Province, Region, and City by as of June 30, 2017",
 			"color": "#3c3c3c",
 			"fontSize": 18,
 			"font": "PortraitText"
@@ -91,98 +91,98 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Beijing",
-				"value": 30,
+				"value": 40,
 				"color": "#ff0032"
 			},
 			{
 				"label": "Shanghai",
-				"value": 15,
+				"value": 35,
 				"color": "#999999"
 			},
 			{
 				"label": "Guangdong",
 				"value": 12,
-				"color": "#FF4C4C"
+				"color": "#ff335c"
 			},
 			{
 				"label": "Yunnan",
 				"value": 9,
-				"color": "#7F0000"
-			},
-			{
-				"label": "Jiangxi",
-				"value": 5,
 				"color": "#cccccc"
 			},
-			{
-				"label": "Tianjin",
-				"value": 5,
-				"color": "#555555"
-			},
-			{
-				"label": "Liaoning",
+      {
+        "label": "Sichuan",
+        "value": 5,
+        "color": "#666666"
+      },
+      {
+        "label": "Tianjin",
+        "value": 5,
+        "color": "#ff5c7c"
+      },
+      {
+        "label": "Liaoning",
+        "value": 4,
+        "color": "#b80025"
+      },
+      {
+				"label": "Shandong",
 				"value": 4,
-				"color": "#FF0000"
+				"color": "#d8d8d8"
 			},
-			{
-				"label": "Jiangsu",
-				"value": 4,
-				"color": "#3c3c3c"
-			},
-			{
-				"label": "Sichuan",
-				"value": 3,
-				"color": "#e6e6e6"
-			},
-			{
+      {
 				"label": "Hunan",
 				"value": 3,
-				"color": "#666666"
+				"color": "#555555"
 			},
-			{
+      {
+				"label": "Jiangsu",
+				"value": 3,
+				"color": "#ff708d"
+			},
+      {
+        "label": "Shaanxi",
+        "value": 3,
+        "color": "#8f001d"
+      },
+      {
 				"label": "Gansu",
 				"value": 2,
-				"color": "#CC0000"
+				"color": "#e6e6e6"
 			},
-			{
+      {
 				"label": "Hubei",
 				"value": 2,
-				"color": "#FF4C4C"
-			},
-			{
-				"label": "Shaanxi",
-				"value": 2,
-				"color": "#999999"
+				"color": "#3c3c3c"
 			},
 			{
 				"label": "Chongqing",
 				"value": 1,
-				"color": "#3c3c3c"
+				"color": "#ffadbe"
 			},
 			{
 				"label": "Guangxi",
 				"value": 1,
-				"color": "#e6e6e6"
+				"color": "#520010"
 			},
 			{
 				"label": "Guizhou",
 				"value": 1,
-				"color": "#ff0032"
+				"color": "#f2f2f2"
 			},
 			{
 				"label": "Heilongjiang",
 				"value": 1,
-				"color": "#7F0000"
+				"color": "#231f1f"
 			},
 			{
-				"label": "Shandong",
+				"label": "Jiangxi",
 				"value": 1,
-				"color": "#3c3c3c"
+				"color": "#ffebef"
 			},
 			{
 				"label": "Tibet",
 				"value": 1,
-				"color": "#FF4C4C"
+				"color": "#290008"
 			}
 		]
 	},
